--- a/apps/admin/views/index.html
+++ b/apps/admin/views/index.html
@@ -1,4 +1,7 @@
 {% extends "commons/base.htm" %}
 {% block body %}
     This is the left side!
-{% endblock %}  
+    <script>
+        alert("{{ok}}");
+    </script>
+{% endblock %}
