--- a/apps/admin/views/commons/scripts.html
+++ b/apps/admin/views/commons/scripts.html
@@ -1,4 +1,6 @@
-<script src="{$getAppUrl('static')}/script/jquery-3.3.1.min.js"></script>
-        <script src="{$getAppUrl('static')}/bootstrap/js/bootstrap.min.js"></script>
-        <link href="{$getAppUrl('static')}/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="{$getAppUrl('static')}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
+<script src="{(getAppUrl('static'))}/script/jquery-3.3.1.min.js"></script>
+<script src="{(getAppUrl('static'))}/script/angular.min.js"></script>
+<script src="{(getAppUrl('static'))}/script/main-directive.js"></script>
+<script src="{(getAppUrl('static'))}/bootstrap/js/bootstrap.min.js"></script>
+<link href="{(getAppUrl('static'))}/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link href="{(getAppUrl('static'))}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
