--- a/apps/admin/views/login.html
+++ b/apps/admin/views/login.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <script src="{$getAppUrl('static')}/script/jquery-3.3.1.min.js"></script>
-        <script src="{$getAppUrl('static')}/bootstrap/js/bootstrap.min.js"></script>
-        <link href="{$getAppUrl('static')}/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="{$getAppUrl('static')}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
+        <script src="{(getAppUrl('static'))}/script/jquery-3.3.1.min.js"></script>
+        <script src="{(getAppUrl('static'))}/bootstrap/js/bootstrap.min.js"></script>
+        <link href="{(getAppUrl('static'))}/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="{(getAppUrl('static'))}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
         
     </head>
     <body>
@@ -33,11 +33,11 @@
             });
         </script>
         <form action="" method="POST" role="form" style="max-width:200px;">
-            <legend>Form title</legend>
+            <legend>[Form title]</legend>
         
             <div class="form-group">
                 <label for="">label</label>
-                <input type="text" name="username" value="{$form.data.username}" class="form-control" id="" placeholder="Input field">
+                <input type="text" name="username" value="{(form.data.username)}" class="form-control" id="" placeholder="Input field">
             </div>
             <div class="form-group">
                 <label for="">label</label>
@@ -49,7 +49,7 @@
 
             <div class="alert alert-danger">
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                    <strong>res:::(Error)</strong>{$form.error}
+                    <strong>res:::(Error)</strong>{(form.error)}
                 </div>
         
         
