--- a/apps/admin/views/commons/menu.html
+++ b/apps/admin/views/commons/menu.html
@@ -1,6 +1,5 @@
 <script server>
     (function(model,req,res,next){
-        debugger;
         model.menu=model.loadModule("~/libs/menu.js");
     })
 </script>
@@ -41,5 +40,5 @@
                 </ul>
             </li>
         </ul>
-    </div><!-- /.navbar-collapse -->
+    </div>
 </nav>
