--- a/apps/admin/views/pages/users.html
+++ b/apps/admin/views/pages/users.html
@@ -4,4 +4,12 @@
         model.xx=1;
     })
 </script>
-dasdasda dasd
+<div>
+    res:(res:\(username1\));
+    res::(username);
+    res:::(username);
+    dasdasd
+    dasdasd
+    dasdas
+    
+</div>
