--- a/apps/admin/views/page$pageName.html
+++ b/apps/admin/views/page$pageName.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
+<div>
     <script server>
         (function(model,req,res,next){
             debugger;
             model.pageName="pages/"+req.params.pageName+".html";
         })
     </script> 
-    {(loadFile(pageName))}   
-</body>
-</html>
+    {(loadHtml(pageName)|safe)}
+</div>>
