update from vs code

--- a/apps/admin/views/login.html
+++ b/apps/admin/views/login.html
@@ -32,29 +32,34 @@
                 }
             });
         </script>
-        <form action="" method="POST" role="form" style="max-width:200px;">
-            <legend>[Form title]</legend>
         
-            <div class="form-group">
-                <label for="">label</label>
-                <input type="text" name="username" value="{(form.data.username)}" class="form-control" id="" placeholder="Input field">
-            </div>
-            <div class="form-group">
-                <label for="">label</label>
-                <input type="password" name="password" class="form-control" id="" placeholder="Input field">
-            </div>
+        <div class="container" style="text-align:center;border:solid 4px red;width:300px">
+            <form action="" method="POST" role="form">
+                <legend>[Form title]</legend>
             
-        
-            <button type="submit" class="btn btn-primary">Submit</button>
-            {% if form.error %}
-            <div class="alert alert-danger">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                    <strong>res:::(Error)</strong>{(form.error)}
+                <div class="form-group">
+                    <label for="">label</label>
+                    <input type="text" name="username" value="{(form.data.username)}" class="form-control" id="" placeholder="Input field">
                 </div>
-            {% endif %}
+                <div class="form-group">
+                    <label for="">label</label>
+                    <input type="password" name="password" class="form-control" id="" placeholder="Input field">
+                </div>
+                
+            
+                <button type="submit" class="btn btn-primary">Submit</button>
+                {% if form.error %}
+                <div class="alert alert-danger">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                        <strong>res:::(Error)</strong>{(form.error)}
+                    </div>
+                {% endif %}
+            
+            
+            </form>
+        </div>
         
         
-        </form>
         
         
         
