--- a/apps/admin/views/commons/scripts.html
+++ b/apps/admin/views/commons/scripts.html
@@ -2,5 +2,7 @@
 <script src="{(getAppUrl('static'))}/script/angular.min.js"></script>
 <script src="{(getAppUrl('static'))}/script/main-directive.js"></script>
 <script src="{(getAppUrl('static'))}/bootstrap/js/bootstrap.min.js"></script>
+<script src="{(getAppUrl('static'))}/script/caller.js"></script>
 <link href="{(getAppUrl('static'))}/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <link href="{(getAppUrl('static'))}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
+<script src="{(getAppUrl('static'))}/script/ajax.js"></script>
