--- a/apps/admin/views/login.html
+++ b/apps/admin/views/login.html
@@ -33,21 +33,21 @@
             });
         </script>
         
-        <div class="container" style="text-align:center;border:solid 4px red;width:300px">
+        <div class="container" style="text-align:center;border:solid 4px red;width:300px;margin-top:15%">
             <form action="" method="POST" role="form">
-                <legend>[Form title]</legend>
+                <legend>res:::(Login)</legend>
             
                 <div class="form-group">
-                    <label for="">label</label>
+                    <label for="">res:::(Username)</label>
                     <input type="text" name="username" value="{(form.data.username)}" class="form-control" id="" placeholder="Input field">
                 </div>
                 <div class="form-group">
-                    <label for="">label</label>
+                    <label for="">res:::(Password)</label>
                     <input type="password" name="password" class="form-control" id="" placeholder="Input field">
                 </div>
                 
             
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">res:::(Login)</button>
                 {% if form.error %}
                 <div class="alert alert-danger">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
